feat: implementando 'fale conosco'

--- a/main.css
+++ b/main.css
@@ -35,7 +35,8 @@ body {
 
 }
 
-.nav-cardapio .nav-link.active {
+.nav-cardapio .nav-link.active,
+#fale-conosco button {
     background-color: #e15f41;
     color: #fff;
 }
@@ -43,3 +44,13 @@ body {
 .nav-cardapio .nav-link:hover {
     color: #e15f41;   
 }
+
+.social-links li {
+    list-style: none;
+    display: inline;
+}
+
+.social-links a {
+    text-decoration: none;
+}
+
